@@ -10,6 +10,8 @@ script. Updated all existing incidences to match.
 
 Various missing translations strings added.
 
+Removed the register time (TODO: it needs a live clock).
+
 
 Version 2.0.2 release (2014/05/01)
 -------------------------------------------
